# wasm-game

./: LICENSE  README.md  deno.json  example.go  server.tsx  views.tsx
.github/workflows/: deploy.yml  go-ci.yml  go.yml  rust-ci.yml
base/: index.html  loader.js  server.js
docs/: architecture.uml  go_class.uml  rust_class.uml
example-go/: deno.json  go.mod  notes.md  render.html  server.js
go-ebitengine/: .gitignore  Makefile  flake.nix  go.mod  go.sum  main.go
go-ebitengine/.direnv/: flake-profile-2-link
go-ebitengine/public/: main.html  wasm_exec.js
js-phaser/public/: main.html  main.js
lua-love2d/: .gitignore  .luarc.json  Makefile  flake.nix  main.lua
lua-love2d/public/: game.data  game.js  index.html  main.html
plots/: flake.nix  main.py  pyproject.toml
plots/.direnv/: flake-profile-14-link
plots/data/: console-export-2025-5-2_11-56-37.csv  go-webkit.csv  go_chromium.csv  go_firefox.csv  go_webkit.csv  js-webkit.csv  js_chromium.csv  js_console-export-2025-5-2_12-2-39.csv  js_firefox.csv  js_laptop-console-export-2025-5-2_12-34-11.csv  js_webkit.csv  laptop-console-export-2025-5-2_12-53-28.csv  laptop-go-chromium.csv  laptop-go-firefox.csv  laptop-go-webkit.csv  laptop-js-chromium.csv  laptop-js-firefox.csv  laptop-js-webkit.csv  laptop-localhost-1746183332967.csv  laptop-localhost-1746183442882.csv  laptop_rust_opt_z-webkit.csv  laptop_rust_opt_z_firefox.csv  localhost-1746178116000.csv  localhost-1746179741301.csv  opt_z_console-export-2025-5-2_12-1-32.csv  opt_z_laptop-console-export-2025-5-2_12-55-2.csv  opt_z_laptop-rust-webkit.csv  opt_z_localhost-1746178477385.csv  rust-webkit.csv  rust_opt_3_chromium.csv  rust_opt_3_firefox.csv  rust_opt_3_webkit.csv  rust_opt_z_chromium.csv  rust_opt_z_firefox.csv  rust_opt_z_webkit.csv  test.csv
public/: performanceMetrics.js
rust-bevy/: .gitignore  Cargo.toml  Makefile  flake.nix
rust-bevy/.direnv/: flake-profile  flake-profile-43-link
rust-bevy/public/: main.html
rust-bevy/src/: lib.rs  main.rs
