[package]
name = "rust-bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = [
  "console_error_panic_hook",
  "bevy/dynamic_linking",
  "bevy/file_watcher",
  "bevy/asset_processor",
  "bevy/multi_threaded",
  "bevy/x11",
]

[dependencies]
wasm-bindgen = "0.2.84"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

console_error_panic_hook = { version = "0.1.7", optional = true }
bevy = { version = "0.15.3", default-features = false, features = [
  "bevy_winit",
  "bevy_ui",
  "webgl2",
  "png",
  "default_font",
] }
# rand = "0.9.1"
fastrand = "2.3.0"

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-Oz"]
wasm-opt = ["-Oz", "--vacuum", "--strip-debug", "--strip-dwarf"]
# wasm-opt = ["-Oz", "--enable-mutable-globals"]
# wasm-opt = ["-O4", "--flexible-inline-max-function-size", "4294967295"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0       # Switch to 1 for more runtime performance

[profile.release]
# Tell `rustc` to optimize for small code size and other optimizations
opt-level = "z"
panic = 'abort'
debug = 0
strip = true
lto = "thin"
codegen-units = 1
