[package]
name = "rust-bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = [
  "console_error_panic_hook",
  "bevy/dynamic_linking",
  "bevy/file_watcher",
  "bevy/asset_processor",
  "bevy/multi_threaded",
  "bevy/x11",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
bevy = { version = "0.15.3", default-features = false, features = [
  "bevy_winit",
  "bevy_ui",
  "webgl2",
  # "webgpu",
  "png",
  "default_font",
] }
fastrand = "2.3.0"
once_cell = "1.21.3"

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-Oz"]
### small binary size
wasm-opt = false
# wasm-opt = [
#   "-Oz",
#   "--enable-bulk-memory",
# "--enable-saturating-float-to-int",
# "--dce",
# "--vacuum",
# "--strip-debug",
# "--strip-dwarf",
# "--enable-bulk-memory",
# "--fast-math",
# "--enable-simd",
# "--coalesce-locals",
# "--remove-unused-module-elements",
# "--minify-imports-and-exports",
# "--converge", # super slow
# "--flatten",  # do not use this(slow and larger size) but not super slow with --rereloop
# "--rereloop", # needs --flatten
# "--enable-mutable-globals", # Allow mutable globals for certain optimizations (if applicable)
# ]

### high performance
# wasm-opt = [
#   # "-O3",
#   "-O4",
#   "--vacuum",
#   "--fast-math",
#   "--flatten",
#   "--rereloop",
#   "--coalesce-locals",
#   "--enable-mutable-globals",
#   "--flexible-inline-max-function-size",
#   "4294967295",
# ]

### purely compile speed
# wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0

[profile.release]
### small binary size
opt-level = "z"
panic = 'abort'
strip = true
# lto = "off"
# lto = "thin"
lto = "fat"
codegen-units = 1
# codegen-units = 16
rpath = false
debug = 0
incremental = false

### high performance
# opt-level = 3
# panic = 'abort'
# debug = 0
# strip = true
# lto = "fat"
# rpath = false
# codegen-units = 1
# incremental = false

### purely compile speed
# opt-level = 0
# strip = false
# incremental = true
# lto = "off"
# codegen-units = 16
# debug = 0
